tests for ExpenseDao