@@ -9,6 +9,7 @@ import org.hibernate.SessionFactory;
 import org.hibernate.Transaction;
 import org.springframework.stereotype.Repository;
 
+import java.util.Collections;
 import java.util.List;
 
 @Repository
@@ -28,13 +29,15 @@ public class ExpenseDaoImpl implements ExpenseDao {
             transaction = session.beginTransaction();
             User user = session.get(User.class, id);
 
-            List<Expense> expenseList = List.of();
-            if (user != null) {
+            List<Expense> expenseList = Collections.emptyList();
+            if (user != null && user.getExpenses() != null) {
                 expenseList = user.getExpenses();
                 Hibernate.initialize(expenseList);
             }
 
-            transaction.commit();
+            if(transaction != null) {
+                transaction.commit();
+            }
             return expenseList;
         } catch (Exception e) {
             if (transaction != null) transaction.rollback();
